# ray_tracing_engine

./: .gitignore  CMakeLists.txt  color.h  common.h  hittable.h  hittable_list.h  main.cc  ray.h  readme.md  sphere.h  vec3.h
include/raytracer/: camera.h  color.h  common.h  hittable.h  hittable_list.h  material.h  rand_utils.h  ray.h  sphere.h  vec3.h
src/: camera.cc  color.cc  common.cc  hittable_list.cc  main.cc  material.cc  sphere.cc  vec3.cc
